--- a/style.css
+++ b/style.css
@@ -234,6 +234,84 @@ body{
     border-radius: 20px;
     padding: 5px 10px 5px 10px;
 }
+/*contact */
+.outer-body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+.contact-body{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: solid rgb(122, 121, 121) 3px;
+    border-radius: 20px;
+}
+.contact-body h1{
+    color: #5757ff;
+    margin: 20px;
+}   
+.contact-form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 350px;
+}
+
+.contact-form button{
+    color: white;
+    background-color: #5757ff;
+    border: none;
+    border-radius: 20px;
+    padding: 5px 10px 5px 10px;
+    margin: 40px;
+    width: 150px;
+
+}
+.contact-form .form-group{
+    background: transparent;
+    margin: 25px;
+    margin-bottom: 10px;
+    margin-top: 20px;
+    padding: 2px;
+    border: none;
+    border-bottom: solid black 2px;
+    width: 250px;
+    height: 50px;
+}
+.contact-form .form-group::placeholder{
+    color: rgb(70, 70, 70);
+    transition: all 0.3s ease;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+}
+.contact-form .form-group:focus::placeholder{
+    color: #5757ff;
+    padding-bottom: 50px;
+}
+.contact-form .form-group:focus{
+    outline: none;
+}
+.contact-form textarea{
+    margin: 25px;
+    margin-bottom: 10px;
+    margin-top: 20px;
+    padding: 2px;
+    width: 250px;
+    height: 100px;
+    border: solid black 2px;
+}
+.contact-form textarea:focus::placeholder{
+    color: #5757ff;
+    padding-bottom: 50px;
+}
+.contact-form textarea:focus{
+    outline: none;
+}
+
 
 
 @media screen and (max-width: 600px) {
